<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sortBy"
        android:icon="@drawable/menu_button"
        android:title="@string/sort_title"

        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/filter_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_popular"
                    android:orderInCategory="1"
                    android:title="@string/sort_popular" />
                <item
                    android:id="@+id/sort_by_topRated"
                    android:orderInCategory="2"
                    android:title="@string/sort_top_rated" />
                <item
                    android:id="@+id/sort_by_favorites"
                    android:orderInCategory="3"
                    android:title="@string/sort_favorite" />
            </group>
        </menu>
    </item>
</menu>